--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,60 @@
+html{
+  background: rgb(206, 206, 206);
+}
 
-  .content-wrapper {
-    margin-right: auto;
-    margin-left:  auto;
-    max-width: 960px;
-    padding-right: 10px;
-    padding-left:  10px;
-  }
+body{
+  margin: 0;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-  nav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  nav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  nav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  nav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
+}
+
+.content-wrapper {
+  margin-right: auto;
+  margin-left:  auto;
+  max-width: 960px;
+  padding-right: 40px;
+  padding-left:  40px;
+  padding-top: 40px;
+}
+
+nav {
+  background-color: #333;
+  overflow: hidden;
+  position: sticky;
+  top: 0px;
+}
+
+/* Style the links inside the navigation bar */
+nav a {
+  float: left;
+  color: #f2f2f2;
+  padding: 10px;
+  width: 100px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
+}
+
+/* Change the color of links on hover */
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+nav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+#header-wrapper img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10%;
+}
+
+#header-wrapper{
+  text-align: center;
+}
+
