--- a/css/styles.css
+++ b/css/styles.css
@@ -30,11 +30,11 @@ nav {
 nav a {
   float: left;
   color: #f2f2f2;
-  padding: 10px;
-  width: 100px;
+  padding: 0.5em;
+  width: 5em;
   text-decoration: none;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25em;
 }
 
 /* Change the color of links on hover */
@@ -45,7 +45,6 @@ nav a:hover {
 
 /* Add a color to the active/current link */
 nav a.active {
-  background-color: #4CAF50;
   color: white;
 }
 
