Update for mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,12 +31,11 @@ nav a {
   width: 10vw;
   min-width: 100px;
   padding: 0.5em 0 0.5em 0;
- 
   text-decoration: none;
   text-align: center;
   font-size: 16pt;
-
 }
+
 
 /* Change the color of links on hover */
 nav a:hover {
@@ -50,6 +49,7 @@ nav a.active {
 }
 
 
+
 header{
 position: relative;
 margin-bottom: -4px;
@@ -61,5 +61,16 @@ header span{
   font-size: larger;
   position: absolute;
   font-style: italic;
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media (max-width: 600px) {
+
+  nav a {
+    width: 100%;
+    border-bottom: 1px solid white;
+  }
+  
 }
 
